# DockerAutoBuild

./: CMakeLists.txt  README.md  main.cpp
src/DockerYml/: __init__.py  docker_abstract.py  docker_compose.py  docker_volumes.py
src/MainWidget/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/MainWidget/include/: mainwindow.h
